--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-* {
-  box-sizing: border-box;
-  margin: 0 auto;
-}
-
 header,
 footer {
   background-color: #bb2d3b;
@@ -49,6 +44,6 @@ span {
   font-weight: lighter;
 }
 
-.pet-list {
+.row .justify-content-center .align-items-center .pet-list {
   display: none;
 }
